@@ -19,7 +19,7 @@ public class TwoSums {
         int[] result = new int[2];
         for (int i = 0; i < nums.length; i++) {
             int diff = target - nums[i];
-            int otherIndex = Arrays.asList(nums).indexOf(diff);
+            int otherIndex = List.of(nums).indexOf(diff);
             if(otherIndex != -1){
                 return new int[]{i, otherIndex};
             }
